--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,3 +1,9 @@
+#__next {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
@@ -48,4 +54,12 @@
 
 .pl-8px {
   padding-left: 8px;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.h-100 {
+  height: 100%;
 }
