--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -10,7 +10,8 @@
   background-color: #e9ecef;
   border-radius: 0.3rem;
 
-  background-image: linear-gradient(to right, #007bff, #000);
+  /* background-image: linear-gradient(to right, #007bff, #000); */
+  background-image: linear-gradient(to right, #ff0000, #ff9900);
   color: #fff;
 }
 
